[package]
name = "frost-dalek"
version = "0.2.3"
authors = ["isis lovecruft <isis@patternsinthevoid.net>"]
edition = "2018"
description = "FROST: Flexible Round-Optimised Threshold Signature using the Ristretto group"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/isislovecruft/frost-dalek"
homepage = "https://dalek.rs"
documentation = "https://docs.rs/frost-dalek"
keywords = ["cryptography", "frost", "ristretto", "signature", "threshold-signature"]
categories = ["cryptography"]
exclude = [ ".gitignore" ]

[lib]
crate-type = ["rlib", "staticlib"]
doctest = false

[[bin]]
name = "frost-cli"
path = "src/main.rs"
test = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "/opt/rustwide/workdir/docs/assets/rustdoc-include-katex-header.html"]

[dependencies]
curve25519-dalek = { version = "3", default-features = false, features = ["alloc", "u64_backend"] }
rand_core = { version = "0.5", default-features = false }
sha2 = { version = "0.9", default-features = false }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
linked_list_allocator = { version = "0.10"}
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "alloc"] }
rand = {version = "0.7", default-features = false, optional = true}


[dev-dependencies]
rand = {version = "0.7", default-features = false}
criterion = { version = "0.3" }
ed25519-dalek = { version = "1", default-features = false, features = ["alloc", "u64_backend"] }
linked_list_allocator = { version = "0.10"}
ctor = "0.2"


[features]
default = ["std", "u64_backend","force-alloc"]

alloc = [
    "curve25519-dalek/alloc",
    "ed25519-dalek/alloc"
]

nightly = [
    "curve25519-dalek/nightly",
    "ed25519-dalek/nightly"
]

u32_backend = [
    "curve25519-dalek/u32_backend",
    "ed25519-dalek/u32_backend"
]

u64_backend = [
    "curve25519-dalek/u64_backend",
    "ed25519-dalek/u64_backend"
]

simd_backend = [
    "curve25519-dalek/simd_backend",
    "ed25519-dalek/simd_backend"
]

std = [
    "curve25519-dalek/std",
    "ed25519-dalek/std",
    "rand"
]

force-alloc = []
